--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@svgr/webpack": "4.1.0",
     "antd": "^3.16.1",
     "antd-mobile": "^2.2.11",
+    "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
@@ -125,6 +126,12 @@
     "react-app-rewire-less": "^2.1.3",
     "react-app-rewire-webpack-bundle-analyzer": "^1.0.1",
     "react-app-rewired": "^2.1.1",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "koa": "^2.7.0",
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
+    "koa2-cors": "^2.0.6",
+    "mongodb": "^3.2.2"
   }
 }
